@@ -172,7 +172,7 @@ public abstract class AbstractCloudBackupRestoreTestCase extends SolrCloudTestCa
       solrClient.commit(getCollectionName());
     }
 
-    testBackupAndRestore(getCollectionName(), backupReplFactor);
+    testBackupAndRestore(getCollectionName());
     testConfigBackupOnly("conf1", getCollectionName());
     testInvalidPath(getCollectionName());
   }
@@ -326,7 +326,7 @@ public abstract class AbstractCloudBackupRestoreTestCase extends SolrCloudTestCa
     return numDocs;
   }
 
-  private void testBackupAndRestore(String collectionName, int backupReplFactor) throws Exception {
+  private void testBackupAndRestore(String collectionName) throws Exception {
     String backupLocation = getBackupLocation();
     String backupName = BACKUPNAME_PREFIX + testSuffix;
 
@@ -347,7 +347,9 @@ public abstract class AbstractCloudBackupRestoreTestCase extends SolrCloudTestCa
       if (random().nextBoolean()) {
         assertEquals(0, backup.process(client).getStatus());
       } else {
-        assertEquals(RequestStatusState.COMPLETED, backup.processAndWait(client, 30)); // async
+        String asyncId = backup.processAsync(client);
+        assertNotNull(asyncId);
+        CollectionAdminRequest.waitForAsyncRequest(asyncId, client, 30);
       }
     }
 
@@ -395,10 +397,13 @@ public abstract class AbstractCloudBackupRestoreTestCase extends SolrCloudTestCa
     if (sameConfig == false) {
       restore.setConfigName("customConfigName");
     }
+
     if (random().nextBoolean()) {
       assertEquals(0, restore.process(client).getStatus());
     } else {
-      assertEquals(RequestStatusState.COMPLETED, restore.processAndWait(client, 60)); // async
+      String asyncId = restore.processAsync(client);
+      assertNotNull(asyncId);
+      CollectionAdminRequest.waitForAsyncRequest(asyncId, client, 60);
     }
     AbstractDistribZkTestBase.waitForRecoveriesToFinish(
         restoreCollectionName, ZkStateReader.from(client), log.isDebugEnabled(), true, 30);
